[project]
name = "clicksearch"
version = "0.5.0"
description = "Framework for CLI applications that filter data streams"
readme = "README.md"
requires-python = ">=3.9"
license = {file = "LICENSE"}
keywords = ["click"]
authors = [
  {name = "Petter Nyström", email = "jimorie@gmail.com" }
]
maintainers = [
  {name = "Petter Nyström", email = "jimorie@gmail.com" }
]
dependencies = [
  "click==8.1.6"
]

[project.optional-dependencies]
dev = ["ruff", "mypy", "black", "twine", "build", "hatchling", "bump"]

[project.urls]
"Homepage" = "https://github.com/jimorie/clicksearch"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"
